# OrchestratAI

./: .dockerignore  .gitignore  INTEGRATION_TESTS_ADDED.md  README.md  docker-compose.prod.yml  docker-compose.yml  package.json
.github/: dependabot.yml  labeler.yml  pull_request_template.md
.github/workflows/: auto-label.yml  ci.yml  claude-code-review.yml  claude.yml  validate-enums.yml
.husky/: README.md  pre-commit  pre-push
data/chroma_db/: chroma.sqlite3
data/docs/: README.md
docs/: CI_CD_GUIDE.md  SECURITY-MIGRATION-4.4.md  architecture.md  coding-standards.md
docs/Database_Instructions/: README.md
docs/agent-planning/: agent-feature-planning.md
docs/architecture/: 1-introduction.md  10-backend-architecture.md  11-unified-project-structure.md  12-development-workflow.md  13-deployment-architecture.md  14-security-and-performance.md  15-testing-strategy.md  16-coding-standards.md  17-error-handling-strategy.md  18-monitoring-and-observability.md  2-high-level-architecture.md  3-tech-stack.md  4-data-models.md  5-api-specification.md  6-components.md  7-core-workflows.md  8-database-schema.md  9-frontend-architecture.md  change-log.md  document-complete.md  index.md  source-tree.md  table-of-contents.md
docs/prd/: orchestratai_prd_v2.md
docs/stories/: 1.1.setup-dependencies.story.md  1.10.create-mobile-responsive-layout.story.md  1.2.create-token-file-structure.story.md  1.3.create-typescript-enums-zod-schemas.story.md  1.5.create-enum-validation-script.story.md  (+56 more)
orchestratai_api/: .env.template  Dockerfile  README.md  dev.sh  pyproject.toml
orchestratai_api/chroma_db/: chroma.sqlite3
orchestratai_api/scripts/: __init__.py  ingest_data.py  ingest_to_server.py  init_database.py  query_docs.py  test_chromadb.py  verify_data.py
orchestratai_api/src/: __init__.py  config.py  main.py
orchestratai_api/src/agents/: __init__.py  base.py  orchestrator.py
orchestratai_api/src/agents/workers/: __init__.py  cag_agent.py  direct_agent.py  hybrid_agent.py  rag_agent.py
orchestratai_api/src/api/: health.py
orchestratai_api/src/api/routes/: chat.py
orchestratai_api/src/cache/: __init__.py  redis_cache.py
orchestratai_api/src/llm/: __init__.py  base_provider.py  bedrock_provider.py  openai_provider.py  pricing.py  provider_factory.py  secrets.py  types.py
orchestratai_api/src/models/: __init__.py  enums.py  schemas.py
orchestratai_api/src/retrieval/: __init__.py  chroma_store.py  vector_store.py
orchestratai_api/src/services/: agent_service.py  mock_data.py  sse_utils.py
orchestratai_api/src/storage/: __init__.py  database.py  models.py  repository.py
orchestratai_api/tests/: test_chat_endpoint.py  test_chat_stream_endpoint.py  test_enums.py  test_health.py  test_mock_data.py  test_mock_data_deprecated.py  test_new_schemas.py  test_schemas.py  test_sse_utils.py
orchestratai_api/tests/cag/: README.md  __init__.py  test_cag_agent.py  test_cag_integration.py  test_cag_resilience.py  test_redis_cache.py
orchestratai_api/tests/fallback/: __init__.py  test_fallback_chain.py  test_fallback_integration.py
orchestratai_api/tests/hybrid/: __init__.py  test_direct_agent.py  test_hybrid_agent.py  test_hybrid_integration.py
orchestratai_api/tests/llm/: test_bedrock_provider.py  test_openai_provider.py  test_pricing.py  test_provider_factory.py  test_secrets.py
orchestratai_api/tests/orchestrator/: __init__.py  test_analyse_query.py  test_decision_logic.py  test_orchestrator_integration.py  test_rag_agent.py
orchestratai_api/tests/retrieval/: test_chroma_store.py
orchestratai_api/tests/storage/: test_database.py
orchestratai_client/: .gitignore  .prettierignore  Dockerfile  Dockerfile.dev  README.md  eslint.config.mjs  package.json  vitest.config.ts
scripts/: start-compose.sh  validate-enums.ts
(+213 files in other folders)
